# rigo-svn

./: doxygen cheat sheet
branches/GtkmmPractice/: gtkmmP  gtkmmPractice.cpp  gtkmmPractice2.cpp
branches/PDFLibPractice/: helloWorld.c
branches/PreliminaryUnusedDesign/: antheadnew.xcf
branches/RigoUI/: GUIStuff  rigo.h  rigoui.glade.bak  rigoui.gladep
branches/popularityFinder/: popularityFinder.sln
branches/wxWidgetsPractice/: RigoPractice.cbp  a.out  main.cpp  makefile
trunk/: FileWriter.cpp  Latex.cpp  RigoUML.dia  classes.cpp  main.cpp  makefile  signal.out  svn-commit.tmp  tools.cpp
trunk/RigoUI/: mainFrame.cpp  mainFrame.h  rigo.cpp  rigo.pjd  rigoui.glade
trunk/design/: Sequence.dia
trunk/old/: Notebook.cpp  Splash.xcf  a.out
trunk/otherSrc/: note.h
trunk/rigo/: AUTHORS  Doxyfile  Makefile  Makefile.in  config.status  configure  configure.in  rigo.kdevelop  rigo.kdevelop.pcs  rigo.kdevses
trunk/rigo/src/: Makefile  Makefile.am  Makefile.in  classtester.cpp  filewriter.cpp  filewriter.h  note.cpp  note.cpp~  note.h  note.h~  notebook.cpp  notebook.cpp~  notebook.h  rigo.cpp~  rigo.desktop  rigo.h  source.cpp  source.cpp~  source.h  toolbox.cpp  toolbox.cpp~  toolbox.h  topic.cpp  topic.cpp~  topic.h
trunk/rigo/src/.deps/: rigo.Po
trunk/rigo/src/Eclipse Project/: .cdtbuild
trunk/rigo/src/UI/: Rigo.pjd  Rigo.rc  RigoBaseUI  mainFrame.cpp  mainFrame.h  makefile.vc  rigo.cpp  rigo.h
trunk/rigo/src/VS Project/: rigo.ncb  rigo.sln  rigo.vcproj
trunk/rigo/src/VS Project/Debug/: BuildLog.htm  mt.dep  rigo.exe.intermediate.manifest  vc80.idb
trunk/rigo/src/rigo/: rigo.sln  rigo.vcproj
trunk/rigo/src/rigo/Debug/: BuildLog.htm  RCa00516  RCa01176  RCa01672  RCa02836  mt.dep  vc80.idb
trunk/rigo/src/rigo/Debug/Art/: Thumbs.db
trunk/src/: rigo.cpp  topic.h
trunk/working Src/: .cdtbuild  (+1 more)
(+75 files in other folders)
